--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ doctest = false
 
 [dependencies]
 chrono = "0.4.38"
+url = "2.5.0"
 uuid = {version="1.8.0", features=["serde"]}
 xml = "0.8.20"
 yaserde = {version="0.10.0"}
