--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,12 +2,13 @@
 authors = ["RSS Blue", "Dovydas Joksas"]
 categories = ["encoding"]
 edition = "2021"
-keywords = ["podcast", "rss", "xml"]
+keywords = ["podcast", "rss", "xml", "podcasting2"]
 license = "MIT OR Apache-2.0"
 name = "goodpod"
 readme = "README.md"
 repository = "https://github.com/rssblue/goodpod"
 version = "0.1.0"
+description = "A crate for generating Podcasting 2.0 feeds."
 
 [dev-dependencies]
 pretty_assertions = "1.4.0"
